Fixed .comment::last-child bottom spacing for even margins/padding

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -301,6 +301,10 @@ input[type="submit"]
 		.children
 			padding 0 1.5em
 
+		.comment
+			&:last-child
+				padding-bottom 1.5em
+
 	.even
 		background $off-white
 
